examples/test/testpolicy9498.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9498
  namespace: namespace195
spec:
  podSelector:
    matchLabels:
      key13: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value12
          key8: value29
          key41: value19
      podSelector:
        matchLabels:
          key20: value34
          key16: value36
          key4: value10
